<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/endDateRow"
    style="@style/AddFormRow">

    <TextView
        style="@style/TitleLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/end_date_label" />

    <ImageView
        android:id="@+id/txtClearEndDate"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/circle_background"
        android:backgroundTint="@color/add_form_muted_surface"
        android:padding="4dp"
        android:src="@drawable/ic_close"
        android:text="@string/clear_button"
        android:textColor="@color/brand_blue"
        android:textStyle="bold"
        android:visibility="visible"
        app:tint="@color/add_form_text_secondary" />


    <TextView
        android:id="@+id/txtEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ValueText"
        android:text="@string/no_end_date"
        android:textColor="@color/add_form_text_secondary"
        />


    <ImageView
        style="@style/ChevronImageView" />

</LinearLayout>
