<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/GrowDailyDialogContainer"
    android:paddingHorizontal="22dp"
    android:paddingTop="22dp"
    android:paddingBottom="18dp"
    android:minWidth="320dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_task_title"
        android:gravity="center"
        android:textColor="@color/dialog_text_primary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/choose_behavior_subtitle"
        style="@style/DialogOptionDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle" />

    <LinearLayout
        android:id="@+id/optionDaily"
        style="@style/DialogOptionCard"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSub">

        <FrameLayout
            android:id="@+id/dailyIconContainer"
            style="@style/DialogOptionIconContainer">

            <ImageView
                android:id="@+id/dailyIcon"
                style="@style/DialogOptionIcon"
                android:src="@drawable/ic_sun"
                android:contentDescription="@string/repeat_task_label" />
        </FrameLayout>

        <Space
            android:layout_width="12dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/optionDailyTitle"
                style="@style/DialogOptionTitle"
                android:text="@string/repeat_task_label" />

            <TextView
                style="@style/DialogOptionDescription"
                android:text="@string/repeat_task_desc" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionDay"
        style="@style/DialogOptionCard"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optionDaily">

        <FrameLayout
            android:id="@+id/dayIconContainer"
            style="@style/DialogOptionIconContainer">

            <ImageView
                android:id="@+id/dayIcon"
                style="@style/DialogOptionIcon"
                android:src="@drawable/ic_calendar"
                android:contentDescription="@string/one_day_task_label" />
        </FrameLayout>

        <Space
            android:layout_width="12dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/optionDayTitle"
                style="@style/DialogOptionTitle"
                android:text="@string/one_day_task_label" />

            <TextView
                style="@style/DialogOptionDescription"
                android:text="@string/one_day_task_desc" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
