<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reminderBody"
    style="@style/AddFormRow"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <!-- Reminder -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enable_reminder_label"
            style="@style/TitleLabel" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       android:paddingBottom="16dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_time_label"
                android:textColor="@color/add_form_text_secondary" />

            <TextView
                android:id="@+id/txtReminderTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="12dp"
                android:text="@string/time_placeholder"
                android:textColor="@color/add_form_text_secondary"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivBatteryWarning"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_warning"
                android:contentDescription="@string/battery_optimization_content_description"
                android:visibility="visible"
                app:tint="@color/add_form_text_secondary" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>

